syntax = "proto3";

package user;

// Request message for getting the user's token balance
message GetTokenBalanceRequest {
    string user_id = 1; // The unique ID of the user
}

// Response message for retrieving the user's token balance
message GetTokenBalanceResponse {
    double tokens = 1; // The user's current token balance
}

// Request message for adding tokens to a user's account
message AddTokenRequest {
    string user_id = 1;       // The unique ID of the user
    double tokens = 2;  // The amount of tokens to add
}

// Response message for adding tokens to a user's account
message AddTokenResponse {
}

// Request message for subtracting tokens from a user's account
message SubtractTokenRequest {
    string user_id = 1;       // The unique ID of the user
    double tokens = 2;  // The amount of tokens to subtract
}

// Response message for subtracting tokens from a user's account
message SubtractTokenResponse {
}
